# osint-core

./: .gitignore  .trivyignore  AGENTS.md  Dockerfile  Makefile  alembic.ini  docker-compose.dev.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-base-images.yml  ci.yaml
apps/web/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: index.css  main.tsx
deploy/k8s/: README.md  migration-job.yaml
deploy/k8s/web/: deployment.yaml  service.yaml
docker/python-base-ml/: Dockerfile
docs/: api-reference.md  architecture.md  bootstrap-plan.md  configuration.md  connectors.md  data-model.md  runbook.md  ui-stitch-handoff.md  verification.md
docs/plans/: 2026-03-03-cicd-pipeline-design.md  2026-03-03-cicd-pipeline-implementation.md  2026-03-03-ingest-pipeline-implementation.md  2026-03-03-ingest-pipeline-wiring-design.md  2026-03-04-image-build-optimization-design.md  2026-03-04-image-build-optimization-implementation.md
docs/superpowers/plans/: 2026-03-16-alembic-ci-migrations.md  2026-03-16-nlp-scoring-schema-fixes.md  2026-03-16-platform-tuning.md  2026-03-26-ingest-stability-fixes.md  2026-03-26-xai-x-search-connector.md  2026-03-30-cal-activation.md  2026-03-30-documentation-audit.md  2026-03-31-deep-constitutional-analysis.md  2026-04-02-cal-quality-refinement.md  2026-04-07-frontend-cicd.md
docs/superpowers/specs/: 2026-03-16-alembic-ci-migrations-design.md  2026-03-16-nlp-scoring-schema-fixes-design.md  2026-03-16-platform-tuning-design.md  2026-03-26-ingest-stability-fixes-design.md  2026-03-26-xai-x-search-connector-design.md  2026-03-27-cal-prospecting-design.md  2026-03-30-cal-activation-design.md  2026-03-30-documentation-audit-design.md  2026-03-31-deep-constitutional-analysis-design.md  2026-04-02-cal-quality-refinement-design.md  2026-04-07-frontend-cicd-design.md
docs/ui-stitch-export/: component-analysis.md
docs/ui-stitch-export/html/: briefs-document-centric-split-view.html  consolidated-osint-dashboard-active-map.html  event-detail-investigation.html  events-explorer-contract-accurate.html  plans-workspace-activation-ops-console.html  plans-workspace-validation-diff.html
migrations/: env.py  init-schema.sql
migrations/versions/: 0001_initial_schema.py  0002_add_geo_columns.py  0003_add_watches.py  0004_add_partial_success_job_status.py  0005_unique_dedupe_fingerprint.py  0006_add_dedup_and_nlp_columns.py  0006_add_leads_table.py  0006b_add_leads_table.py  0007_extend_analysis_status_check.py  0007_update_generated_by_default.py  0008_add_user_preferences.py  0009_add_reports_table.py  0010_add_deep_analysis.py  0011_extend_analysis_status_check.py  77ec0a12abb2_merge_migration_heads.py  dd493f3ccae5_anchor_manual_revision.py
plans/: austin-terror-threat.yaml  austin-terror-watch.yaml  cal-prospecting.yaml  cortech-osint-master.yaml  cyber-threat-intel.yaml  example.yaml  humanitarian-intel.yaml  military-intel.yaml
plans/templates/: README.md  brand-reputation.yaml  cyber-threat-intel.yaml  geopolitical-monitoring.yaml  physical-security.yaml
schemas/: plan-v1.schema.json
scripts/: load_plan.sh  verify_ingest.sh
src/osint_core/: __init__.py  config.py  db.py  llm.py  logging.py  main.py  metrics.py  tracing.py
src/osint_core/api/: __init__.py  deps.py  errors.py  realtime.py
src/osint_core/connectors/: __init__.py  abusech.py  acled.py  base.py  cisa_kev.py  gdelt.py  nvd.py  nws.py  osv.py  otx.py  pastebin.py  reddit.py  registry.py  reliefweb.py  rss.py  shodan.py  telegram.py  threatfox.py  university_policy.py  (+2 more)
test-results/: events-by-score-2026-03-16.json  events-by-score-2026-03-16.md
tests/: conftest.py  helpers.py  test_alerting.py  test_analyze_leads_task.py  test_api_routes.py  test_audit.py  test_auth.py  test_brief_generator.py  test_celery_setup.py  test_correlation.py  test_courtlistener_precedent.py  test_deep_analysis_integration.py  test_deep_analyzer.py  test_document_extractor.py  test_escalation.py  test_events_sort.py  test_health.py  test_indicators.py  test_llm.py  test_logging.py  test_metrics.py  test_migration_0006.py  test_models.py  test_ner.py  test_notification.py  test_plan_api.py  test_plan_engine.py  test_preferences.py  test_rate_limit.py  test_schemas.py  test_scoring.py  test_tracing.py  test_vectorize.py  test_watch_routes.py
tests/api/: test_ingest_route.py  test_leads.py  test_search_route.py
tests/connectors/: test_abusech.py  test_acled.py  test_base.py  test_cisa_kev.py  test_gdelt.py  test_gdelt_filtering.py  test_nvd.py  test_nws.py  test_osv.py  test_otx.py  test_pastebin.py  test_reddit.py  test_registry.py  test_reliefweb.py  test_rss.py  test_shodan.py  test_telegram.py  test_threatfox.py  test_university_policy.py  test_urlhaus.py  test_xai_x_search.py
tests/integration/: conftest.py  test_pipeline.py  test_prospecting_pipeline.py
tests/services/: conftest.py  test_alert_rules.py  test_courtlistener.py  test_dedup.py  test_geo.py  test_lead_matcher.py  test_pdf_export.py  test_prospecting_report.py  test_report_run_id_progress.py  test_resend_notifier.py  test_scoring_v3.py  test_watch_matcher.py
tests/templates/: test_prospecting_report.py
tests/workers/: test_analyze_leads.py  test_correlate.py  test_digest.py  test_ingest.py  test_ingest_pipeline.py  test_k8s_dispatch.py  test_nlp_enrich.py  test_notify.py  test_prospecting.py  test_prospecting_report.py  test_retention.py  test_score.py  test_vectorize_task.py
(+204 files in other folders)
