[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osint-core"
version = "0.1.0"
description = "Self-hosted OSINT monitoring platform"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "celery[redis]>=5.4.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0",
  "jsonschema>=4.20.0",
  "apprise>=1.8.0",
  "structlog>=24.0.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-instrumentation-fastapi>=0.41b0",
  "opentelemetry-instrumentation-celery>=0.41b0",
  "opentelemetry-exporter-otlp>=1.20.0",
  "jinja2>=3.1.0",
  "python-jose[cryptography]>=3.3.0",
  "feedparser>=6.0.0",
  "tldextract>=5.0.0",
  "weasyprint>=62.0",
  "markdown>=3.5.0",
  "minio>=7.2.0",
]

[project.optional-dependencies]
ml = [
  "qdrant-client>=1.9.0",
  "sentence-transformers>=3.0.0",
  "spacy>=3.7.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "respx>=0.22.0",
  "factory-boy>=3.3.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-jsonschema>=4.20.0",
  "types-PyYAML>=6.0",
  "types-python-jose>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/osint_core"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery",
    "celery.*",
    "spacy",
    "spacy.*",
    "apprise",
    "apprise.*",
    "feedparser",
    "feedparser.*",
    "prometheus_client",
    "prometheus_client.*",
    "prometheus_fastapi_instrumentator",
    "prometheus_fastapi_instrumentator.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "qdrant_client",
    "qdrant_client.*",
    "respx",
    "respx.*",
    "redis",
    "redis.*",
    "opentelemetry",
    "opentelemetry.*",
    "weasyprint",
    "weasyprint.*",
    "markdown",
    "markdown.*",
    "minio",
    "minio.*",
    "tldextract",
    "tldextract.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: end-to-end integration tests"]
